--- a/src/Components/Okey/tile.css
+++ b/src/Components/Okey/tile.css
@@ -1,41 +1,43 @@
 .tile {
   width: 54px;
   height: 75px;
-  background-color: #fff;
-  border: 1px solid #000;
+  border: 1px solid #d6d6c2;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #fbf3df;
+  border-radius: 3px;
 }
 
 .rank {
-  width: 54px;
-  height: 52px;
-
   font-family: "Arial";
   font-style: normal;
   font-weight: 800;
   font-size: 36px;
   line-height: 44px;
   display: flex;
+  cursor: default;
 
   flex-direction: column;
   align-items: center;
   text-align: center;
 }
 
-.suit {
+.heart {
   width: 25px;
   height: 25px;
   font-size: 20px;
   font-weight: bold;
-  text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+  /* text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
     -1px 1px 0 #000;
-  border-radius: 50%;
   background-color: #fff;
-  border: 1px solid #000;
+  border: 1px solid #000; */
 
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 50%;
+
+  box-shadow: 0px 12px 12px 0 rgba(0, 0, 0, 0.1) inset,
+    0px -8px 12px 0 rgba(255, 255, 255, 0.3) inset;
 }
