--- a/src/Components/Okey/rack.css
+++ b/src/Components/Okey/rack.css
@@ -1,12 +1,12 @@
 .rack {
   margin: 10px;
   width: 750px;
-  height: 200px;
+  height: 160px;
   display: flex;
   flex-wrap: wrap;
   align-content: space-between;
   justify-content: space-between;
-  /* background-color: #d2b48c;
+  background-color: #d2b48c;
   border: 4px solid #8b5a2b;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
