--- a/src/Components/Okey/rack.css
+++ b/src/Components/Okey/rack.css
@@ -1,12 +1,30 @@
 .rack {
   margin: 10px;
   width: 750px;
-  height: 160px;
+  height: 200px;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   align-content: space-between;
   justify-content: space-between;
   background-color: #d2b48c;
   border: 4px solid #8b5a2b;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.rack > .top {
+  width: 100%;
+  height: 50%;
+  border: 4px solid #8b5a2b;
+  display: flex;
+  align-items: flex-end;
+}
+
+.rack > .bottom {
+  width: 100%;
+  height: 50%;
+  border: 4px solid #8b5a2b;
+  display: flex;
+  align-items: flex-end;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
